--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
-h1{
+*{
+background-color: bisque;
+margin: 0px;
+padding: 0px;
 
-    color: red;
-    font-size: 24px;
-    text-align: center;
+}
+
+
+h1{
+color: blue;
+text-align: center;
+
 }
 
 p{
- font-size: 12px;
 
-    
+    color: red;
+    font-size: 24px;
+    font-weight: 100;
+}
+
+h1{
+
+    color: red; /* en son yazilan kodu uygular*/
 }
