--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@font-face {
+font-family: myFont;
+src: url('./font/Montserrat/static/Montserrat-ExtraBoldItalic.ttf');
+
+}
+
+@font-face {
+font-family:  firstFont;
+src:url('./font/Montserrat/static/Montserrat-ExtraLightItalic.ttf');
+
+}
+
+
+
 *{
 
 margin: 0px;
@@ -16,6 +30,7 @@ padding: 0px;
 /* id classi class element selekterunu eziyor */
 
 #head1{
+    font-family: myFont;
     font-size: 24px;
     width: 300px;
     padding: 50px;
@@ -65,6 +80,7 @@ p{
 
 
 p.description{
+    font-family: firstFont;
 margin: 2em;
 font-size: 24px;
 
