--- a/display.css
+++ b/display.css
@@ -4,5 +4,10 @@ h1, p{
 
 span{
 
-    border: 3px solid red;
+   border: 3px solid red;
+} 
+
+#h2{
+    /* display: none; */
+    visibility: hidden;
 }
