--- a/position1.css
+++ b/position1.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+h1{ 
+    color: blueviolet;
+    text-align: center;
+
+}
+
+
 #first{
 
     background-color: red;
