--- a/opacity.css
+++ b/opacity.css
@@ -1,29 +1,44 @@
+* {
+margin: 0;
+padding: 0;
+}
+
+
+
 body{
-    background-image: url(./images/cicek1.jpg);
+    background-image: url(./images/cıcek4.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+    position: sticky;
     
 }
 
 .container{
-    width: 75%;
+    width: 30%;
+    height: 500%;
     margin: 20% auto;
-    background-color: #b2bec3;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif:
+    background-color: #f5f6fa;
+    position:relative;
+    
+   
     border: 1px solid dark-gray;
    border-radius: 25px;
-   border-width:
-   opacity: 0.7;
+   font-style: oblique;
+ 
+   opacity:0.6;
 
 
 }
 
 p{
-
-padding: 2vw;
-font-size: 1.5rem;
+color:black;
+padding: 1vw;
+text-align:center;
+font-size: 2rem;
+text-decoration:double;
 line-height: 2rem;
-font-family: 'Cookie', cursive;
+font-family: cookie;
+letter-spacing: 1px;
 
 
 }
